[package]
name = "slice-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
serde = "1.0.196"
serde_json = "1.0.113"
slicec  = { version = "0.3.0" }
tokio = { version = "1.35.0", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0"

[profile.release]
opt-level = "z"
strip = "symbols"
