[package]
name = "slice-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
serde = "1.0.203"
serde_json = "1.0.120"
slicec  = { version = "0.3.1" }
tokio = { version = "1.38.1", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0"

[profile.release]
opt-level = "z"
strip = "symbols"
