[package]
name = "slice-language-server"
version = "0.1.1"
edition = "2021"

[dependencies]
futures = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.145"
slicec  = { version = "0.3.3" }
tokio = { version = "1.47.2", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0"

[profile.release]
opt-level = "z"
strip = "symbols"
